--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "crm-teambit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "CRM-Teambit custom elements",
-  "author": "avakandy",
+  "author": "s.nechiporenko@gmail.com",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.4",
